syntax = "proto3";

package key_service;

option go_package = "github.com/clyfar/key_server/protos";

service KeyService {
  rpc CreateKey (CreateKeyRequest) returns (CreateKeyResponse);
  rpc DeleteKey (DeleteKeyRequest) returns (DeleteKeyResponse);
  rpc SearchKeys (SearchKeysRequest) returns (SearchKeysResponse);
  rpc FetchKeyByUUID (FetchKeyByUUIDRequest) returns (FetchKeyByUUIDResponse);
  rpc FetchKeyByID (FetchKeyByIDRequest) returns (FetchKeyByIDResponse);
  rpc FetchAndUnwrapKey (FetchAndUnwrapKeyRequest) returns (FetchAndUnwrapKeyResponse);
}

message CreateKeyRequest {
  string uuid = 1;
  string alias = 2;
  string description = 3;
}

message CreateAndStoreKeyInKMSRequest {
  string uuid = 1;
  string alias = 2;
  string description = 3;
}

message CreateAndStoreKeyInKMSResponse {
  string key_id = 1;
}

message CreateKeyResponse {
  string key_id = 1;
}

message DeleteKeyRequest {
  string uuid = 1;
}

message DeleteKeyResponse {
  bool success = 1;
}

message SearchKeysRequest {
  string uuid = 1;
}

message SearchKeysResponse {
  repeated string key_ids = 1;
}

message FetchKeyByIDRequest {
    string key_id = 1;
}

message FetchKeyByIDResponse {
    string key_material = 1;
}

message FetchKeyByUUIDRequest {
    string uuid = 1;
}

message FetchKeyByUUIDResponse {
    string key_material = 1;
}

message FetchAndUnwrapKeyRequest {
  string uuid = 1;
  string wrapped_private_key = 2;
  string import_token = 3;
  bytes rsa_private_key = 4;
}

message FetchAndUnwrapKeyResponse {
  string key_material = 1;
}
